# Nozy-wallet

./: .dockerignore  .gitignore  AGENTS.md  API_DOCUMENTATION.md  AUDIT_PUSHED.md  AUDIT_STATUS.md  CARGO_AUDIT_FINDINGS.md  CARGO_AUDIT_INSTRUCTIONS.md  CARGO_AUDIT_RESULTS.md  CARGO_CHEC_SETUP.md  CHANGELOG.md  COMMAND_HELP.md  COMMIT_MESSAGE.txt  CONTRIBUTING.md  CROSSLINK_COMMUNITY_SUMMARY.md  CROSSLINK_COMPLETE_REVIEW.md  CROSSLINK_FILES_REVIEW.md  CROSSLINK_QUICK_START.md  CROSSLINK_SETUP_GUIDE.md  Cargo.toml  DEPENDABOT_SECURITY.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_READY.md  DEPLOYMENT_STRATEGY.md  DESKTOP_APP_PLAN.md  DESKTOP_APP_README.md  DESKTOP_APP_SETUP.md  DESKTOP_CLIENT_INTEGRATION.md  DIGITALOCEAN_DEPLOY.md  DIGITALOCEAN_STEP_BY_STEP.md  Dockerfile  ENHANCEMENT_ROADMAP.md  EXPLORE_SECRET_CONTRACTS.ps1  EXPLORE_SECRET_CONTRACTS.sh  FINAL_COMPLETION_REPORT.md  FRONTEND_BACKEND_CONNECTION.md  FRONTEND_CONNECTION_GUIDE.md  FRONTEND_REFERENCE_REPOS.md  GRANT_APPLICATION_SUMMARY.md  LICENSE  (+86 more)
.cargo/: config.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  dependencies.yml  deploy-downloads.yml  deploy-landing-from-desktopclient.yml  desktop-release.yml  extension-ci.yml  extension-release.yml  pages.yml  release.yml
api-server/: .dockerignore  .gitignore  CONNECTION_ERROR_FIX.md  Cargo.toml  DEPLOYMENT_GUIDE.md  Dockerfile  FIX_BUILD_ERROR.md  FRONTEND_DEVELOPER_GUIDE.md  INSTALL_NOW.md  PUBLIC_API_SETUP.md  QUICK_INSTALL_BUILD_TOOLS.ps1  README.md  README_BUILD_FIX.md  README_GIT_BASH.md  SECURITY_CONFIG.md  SECURITY_IMPROVEMENTS.md  USE_DEVELOPER_PROMPT.md  WINDOWS_BUILD_SETUP.md  deploy.sh  docker-compose.yml  fix-path.ps1  fix_connection_error.ps1  nginx.conf.example  quick_fix_connection.ps1  start.ps1  start.sh  systemd.service
api-server/src/: handlers.rs  ironwood_handlers.rs  keystone_handlers.rs  lwd_handlers.rs  main.rs  middleware.rs
assets/: README.md  index-CSzPK1kz.js  index-Zl7hyVsg.css
book/: README.md
book/src/: SUMMARY.md  index.md  introduction.md
browser-extension/: CHANGELOG.md  COMPANION.md  LOCAL_RPC.md  README.md  RELEASES.md  manifest.json
browser-extension/wasm-core/: Cargo.toml
browser-extension/wasm-core/popup/: index.html  package-lock.json  package.json
browser-extension/wasm-core/popup/src/: App.tsx
browser-extension/wasm-core/popup/src/components/: TopNav.tsx
browser-extension/wasm-core/popup/src/lib/: extensionApi.ts  security.test.ts  security.ts
browser-extension/wasm-core/popup/src/store/: uiStore.ts
browser-extension/wasm-core/src/: lib.rs  orchard_block_parse.rs  orchard_scan.rs  orchard_tree_codec.rs  orchard_witness_local.rs
browser-extension/wasm-core/tests/fixtures/: zebrad_getblock_action_short_enc.json  zebrad_getblock_empty_orchard_actions.json
desktop-client/: DESKTOP_BETA_2_RELEASE.md  DESKTOP_BETA_RELEASE.md  DESKTOP_RELEASE.md  README.md  index.html  install-windows-sdk.ps1  package-lock.json  package.json  run-tauri-dev.bat  run-tauri-dev.ps1  test-build.sh  test-tauri.sh  vite.config.ts
desktop-client/src/: App.tsx  (+2 more)
desktop-client/src-tauri/: Cargo.toml  tauri.conf.json
desktop-client/src-tauri/capabilities/: default.json
desktop-client/src-tauri/icons/: icon.icns
desktop-client/src-tauri/src/: error.rs  lib.rs  main.rs  session.rs
desktop-client/src-tauri/src/commands/: address.rs  address_book.rs  backup.rs  balance.rs  config.rs  cosign.rs  ironwood.rs  keystone.rs  lwd.rs  mod.rs  notes.rs  proving.rs  signing.rs  status.rs  sync.rs  transaction.rs  wallet.rs
desktop-client/src-tauri/tests/: restore_wallet.rs
desktop-client/src-tauri/windows/: hooks.nsh
docs/: MAINNET_SEND_EXPIRY_TEST.md  PILOT_MAINNET_EVIDENCE.md  README.md  RELEASE_v2.3.0_CLI.md
downloads/: README.md  index.html
landing/: README.md  deploy.js  index.html  package-lock.json  package.json  vite.config.ts
nozy-mobile/: App.tsx  BEFORE-VPS-PAYMENT.md  HANDOFF.md  README.md  RUN-ON-EMULATOR.bat  STORE-CHECKLIST.md  STORE-LISTING.md  VPS-DEPLOY.md  app.config.js  app.json  eas.json  package-lock.json  package.json  start-dev.ps1  start-web.ps1
scripts/: README.md  build-release.ps1  build-release.sh  build-zeaking-ffi.ps1  commit_nozy.sh  desktop-smoke.ps1  export-wallet-backup.ps1  extension-dev-build.ps1  extension-smoke.ps1  generate-desktop-icons.ps1  generate-nozy-paper.py  generate-nozy-whitepaper.py  ironwood-lwd-smoke.ps1  ironwood-lwd-wsl.ps1  ironwood-lwd-wsl.sh  nozy-lite-bench.ps1  run-nozy-api.ps1  run-nozy-api.sh  run-nozy-wsl.sh  run-nozy.ps1  session-test-send.sh  set-wallet-rpc.ps1  show-dev-stack.ps1  start-lightwalletd-wsl.ps1  start-mainnet-zebra-visible.ps1  stop-nozy-wsl.sh  stop-nozy.ps1  test-long-ua-send.sh  test-zakura-nozywallet.ps1  test-zebrad-nozywallet.ps1  verify-extension-load.ps1  verify-operator-stack.ps1  zeaking-lwd-smoke.ps1  zebra-wsl-rpc.ps1
src/: address_book.rs  addresses.rs  api.rs  benchmarks.rs  block_parser.rs  cache.rs  cli.rs  cli_helpers.rs  config.rs  crypto.rs  encrypted_storage.rs  error.rs  fee_policy.rs  groth16_prover.rs  groth16_prover_simple.rs  grpc_client.rs  hd_wallet.rs  input_validation.rs  ironwood_tree_codec.rs  ironwood_tx.rs  ironwood_witness.rs  key_management.rs  keystone.rs  lib.rs  lite_ops.rs  lite_tui.rs  local_analytics.rs  main.rs  note_index.rs  note_parser.rs  note_storage.rs  note_sync.rs  notes.rs  notes.rs.backup3  notes.rs.backup4  notes.rs.backup6  notes_test.rs  nu6_1_check.rs  nym_mixnet_broadcast.rs  orchard_chain_tree.rs  (+37 more)
tauri-examples/: README.md  package.json.updates.example  vite.config.ts.example
tests/: integration_tests.rs
wallet_data/: notes.json
wasm-poc/: Cargo.toml
wasm-poc/src/: lib.rs
web-app/: README.md
zeaking/: Cargo.toml  README.md  build.rs
zeaking-ffi/: Cargo.toml  README.md
zeaking-ffi/src/: lib.rs
zeaking/proto/: compact_formats.proto  service.proto
zeaking/src/: error.rs  indexer.rs  lib.rs  traits.rs  types.rs
zeaking/src/lwd/: block_source.rs  client.rs  compact_orchard.rs  compact_sapling.rs  mod.rs  store.rs  sync.rs
(+301 files in other folders)
