[package]
name = "nozy"
version = "2.2.3"
edition = "2021"
description = "NozyWallet: A Orchard wallet built for Zebra, delivering the highest level of Zcash privacy through fully-shielded transactions and cutting-edge cryptographic security."
authors = ["LEONINE-DAO"]
license = "MIT"
repository = "https://github.com/LEONINE-DAO/Nozy-wallet"

[dependencies]
# --- Always available (WASM-safe) ---

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Crypto utilities
hex = "0.4"
rand = "0.8"
sha2 = "0.10"
ripemd = "0.1"
aes-gcm = "0.10"
bech32 = "0.9"
argon2 = "0.5"
zeroize = { version = "1.6", features = ["zeroize_derive"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }
# Error handling
thiserror = "1.0"

# Logging (core only; subscriber is native-only)
tracing = "0.1"

# Cryptographic keys
ed25519-dalek = "2.1"
curve25519-dalek = "4.1"

# HD wallet
bip32 = "0.5"
bip39 = "2.1"

# Zcash crypto stack -- default-features off to disable multicore on WASM
# Native builds re-enable multicore via the "native" feature for parallel proving
orchard = { version = "0.11.0", default-features = false, features = ["circuit", "std"] }
zcash_primitives = { version = "0.26.4", default-features = false, features = ["std", "circuits"] }
zcash_protocol = "0.6.2"
zcash_address = "0.9.0"
zcash_note_encryption = "0.4.0"

# Serialization for Zcash types
ark-serialize = "0.4"

# Browser-compatible randomness (WASM)
getrandom = { version = "0.2", optional = true }

# --- Native-only dependencies (optional, enabled by "native" feature) ---

# Async runtime
tokio = { version = "1.0", features = ["full"], optional = true }

# HTTP client (with SOCKS proxy support for Tor)
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls", "socks"], optional = true }

# gRPC support (tonic 0.14+ pulls rustls-webpki >=0.103, fixing RUSTSEC-2026-0049)
tonic = { version = "0.14", default-features = false, features = ["transport", "tls-ring", "tls-webpki-roots"], optional = true }
prost = { version = "0.14", optional = true }
prost-types = { version = "0.14", optional = true }

# CLI
clap = { version = "4.0", features = ["derive", "env"], optional = true }
dialoguer = { version = "0.11", optional = true }
indicatif = { version = "0.17", optional = true }

# Tracing subscriber (native-only, has OS deps)
tracing-subscriber = { version = "0.3.20", features = ["env-filter"], optional = true }

# XDG directory support
directories = { version = "5.0", optional = true }

# Secret Network / Cosmos SDK support
secp256k1 = { version = "0.28", features = ["global-context", "rand"], optional = true }
cosmrs = { version = "0.8", optional = true }
tendermint = { version = "0.35", optional = true }

# Groth16 zkSNARK libraries
groth16 = { version = "0.1", optional = true }
ark-groth16 = { version = "0.3", optional = true }
ark-ff = { version = "0.3", optional = true }
ark-ec = { version = "0.3", optional = true }
ark-bls12-381 = { version = "0.3", optional = true }
ark-std = { version = "0.3", optional = true }

# Zeaking indexing system
zeaking = { path = "zeaking", version = "0.1.0", optional = true, features = ["lightwalletd"] }
async-trait = { version = "0.1", optional = true }

# Orchard note commitment tree (checkpoint + incremental witnesses; matches zcash_primitives / orchard)
incrementalmerkletree = { version = "0.8.2", default-features = false, features = ["legacy-api"], optional = true }
core2 = { version = "0.3", default-features = false, features = ["std"], optional = true }

# Parallel processing
rayon = { version = "1.8", optional = true }

# Futures utilities
futures = { version = "0.3", optional = true }

# Sapling pool (native wallet; optional for WASM-only nozy builds)
sapling = { package = "sapling-crypto", version = "0.5.0", default-features = false, features = ["std", "circuit", "multicore"], optional = true }
zip32 = { version = "0.2", optional = true }
zcash_proofs = { version = "0.26.1", optional = true, default-features = false, features = ["bundled-prover"] }
zcash_transparent = { version = "0.4", optional = true, default-features = false }

[features]
default = ["native"]

# Native feature: enables all desktop/CLI/server dependencies
native = [
    "dep:tokio",
    "dep:reqwest",
    "dep:tonic",
    "dep:prost",
    "dep:prost-types",
    "dep:clap",
    "dep:dialoguer",
    "dep:indicatif",
    "dep:tracing-subscriber",
    "dep:directories",
    "dep:secp256k1",
    "dep:groth16",
    "dep:ark-groth16",
    "dep:ark-ff",
    "dep:ark-ec",
    "dep:ark-bls12-381",
    "dep:ark-std",
    "dep:zeaking",
    "dep:async-trait",
    "dep:incrementalmerkletree",
    "dep:core2",
    "dep:rayon",
    "dep:futures",
    "dep:sapling",
    "dep:zip32",
    "dep:zcash_proofs",
    "dep:zcash_transparent",
    # Re-enable multicore for native parallel proving performance
    "orchard/multicore",
    "zcash_primitives/multicore",
]

# WASM feature: enables browser-compatible randomness
wasm = ["getrandom/js"]

# Secret Network support
secret-network = ["dep:cosmrs", "dep:tendermint"]

[workspace]
members = ["zeaking", "api-server", "zeaking-ffi"]
exclude = ["desktop-client/src-tauri", "wasm-poc", "browser-extension/wasm-core"]
resolver = "2"

[[bin]]
name = "nozy"
path = "src/main.rs"

[[bin]]
name = "benchmark"
path = "src/bin/benchmark.rs"

[[bin]]
name = "check_wallet_password"
path = "src/bin/check_wallet_password.rs"

[[bin]]
name = "measure_sync_speed"
path = "src/bin/measure_sync_speed.rs"

[[bin]]
name = "test_password_variations"
path = "src/bin/test_password_variations.rs"

[[bin]]
name = "diagnose_wallet"
path = "src/bin/diagnose_wallet.rs"