[package]
name = "nozywallet-api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "nozywallet-api"
path = "src/main.rs"

[dependencies]
# HTTP server
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
chrono = { version = "0.4.42", features = ["serde"] }
hex = "0.4"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# TLS/HTTPS support
rustls = "0.21"
rustls-pemfile = "1.0"
tokio-rustls = "0.24"

# Local wallet library
nozy = { path = "../" }

