[package]
name = "nozywallet-api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "nozywallet-api"
path = "src/main.rs"

[dependencies]
# HTTP server
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
chrono = { version = "0.4.45", features = ["serde"] }
hex = "0.4"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# TLS/HTTPS support
axum-server = { version = "0.8", features = ["tls-rustls"] }

# Local wallet library
nozy = { path = "../" }
zeaking = { path = "../zeaking", features = ["lightwalletd"] }
zcash_protocol = { git = "https://github.com/zcash/librustzcash", rev = "4d9a68dc80508e7644aa99e1b4add7c831057bba" }

