[package]
name = "zeaking"
version = "0.1.0"
edition = "2021"
description = "Zeaking - Fast local blockchain indexing system for Zcash (similar to Zingo's Zaino)"
authors = ["LEONINE-DAO"]
license = "MIT"
repository = "https://github.com/LEONINE-DAO/Nozy-wallet"
keywords = ["zcash", "blockchain", "indexing", "orchard", "wallet"]
categories = ["cryptography", "blockchain"]
build = "build.rs"

[features]
default = []
## lightwalletd gRPC (compact blocks) + SQLite cache for Zebrad-backed stacks
lightwalletd = [
    "dep:tokio",
    "dep:tonic",
    "dep:tonic-prost",
    "dep:prost",
    "dep:rusqlite",
]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
async-trait = "0.1"
hex = "0.4"

tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "sync"], optional = true }
tonic = { version = "0.14", optional = true, default-features = false, features = ["transport", "codegen"] }
tonic-prost = { version = "0.14", optional = true }
prost = { version = "0.14", optional = true }
rusqlite = { version = "0.39", features = ["bundled"], optional = true }

[build-dependencies]
tonic-prost-build = "0.14"
