[package]
name = "nozy-wasm"
version = "0.1.0"
edition = "2021"
description = "NozyWallet WASM core -- first production Orchard proving in the browser"
authors = ["LEONINE-DAO"]
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
nozy = { path = "../..", default-features = false, features = ["wasm"] }
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8"
hex = "0.4"
sha2 = "0.10"
aes-gcm = "0.10"
argon2 = "0.5"
bip39 = "2.1"
orchard = { version = "0.11.0", default-features = false, features = ["circuit", "std"] }
zcash_protocol = "0.6.2"
zcash_note_encryption = "0.4.0"

[profile.release]
opt-level = "s"
lto = true
