[package]
name = "nozy-wasm"
version = "0.1.0"
edition = "2021"
description = "NozyWallet WASM core -- first production Orchard proving in the browser"
authors = ["LEONINE-DAO"]
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
nozy = { path = "../..", default-features = false, features = ["wasm"] }
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8"
hex = "0.4"
sha2 = "0.10"
core2 = "0.3"
aes-gcm = "0.10"
argon2 = "0.5"
bip39 = "2.1"
# Aligned to root nozy / NU6.3 Ironwood librustzcash pins.
orchard = { version = "0.15.0-pre.1", default-features = false, features = ["circuit", "std"] }
zcash_protocol = { git = "https://github.com/zcash/librustzcash", rev = "4d9a68dc80508e7644aa99e1b4add7c831057bba" }
zcash_address = { git = "https://github.com/zcash/librustzcash", rev = "4d9a68dc80508e7644aa99e1b4add7c831057bba" }
zcash_note_encryption = "0.4.1"
zcash_primitives = { git = "https://github.com/zcash/librustzcash", rev = "4d9a68dc80508e7644aa99e1b4add7c831057bba", default-features = false, features = ["std", "circuits"] }
zip32 = "0.2.1"
sapling = { package = "sapling-crypto", version = "0.7", default-features = false, features = ["std", "circuit"] }
zcash_transparent = { git = "https://github.com/zcash/librustzcash", rev = "4d9a68dc80508e7644aa99e1b4add7c831057bba", default-features = false, features = ["std"] }
jubjub = "0.10"
bls12_381 = "0.8"
incrementalmerkletree = { version = "0.8.2", default-features = false, features = ["legacy-api"] }

# Ironwood (NU6.3) pre-release — match root nozy pins (wasm-core is outside the workspace).
[patch.crates-io]
zcash_address = { git = "https://github.com/zcash/librustzcash", rev = "4d9a68dc80508e7644aa99e1b4add7c831057bba" }
zcash_primitives = { git = "https://github.com/zcash/librustzcash", rev = "4d9a68dc80508e7644aa99e1b4add7c831057bba" }
zcash_protocol = { git = "https://github.com/zcash/librustzcash", rev = "4d9a68dc80508e7644aa99e1b4add7c831057bba" }
zcash_transparent = { git = "https://github.com/zcash/librustzcash", rev = "4d9a68dc80508e7644aa99e1b4add7c831057bba" }
zcash_keys = { git = "https://github.com/zcash/librustzcash", rev = "4d9a68dc80508e7644aa99e1b4add7c831057bba" }
pczt = { git = "https://github.com/zcash/librustzcash", rev = "4d9a68dc80508e7644aa99e1b4add7c831057bba" }

[profile.release]
opt-level = "s"
lto = true
