[workspace]

[package]
name = "nozywallet-desktop"
version = "2.1.0"
edition = "2021"

[dependencies]
tauri = { version = "=2.9.1", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
hex = "0.4"
indexmap = { version = "1.9.3", features = ["std"] }

# NozyWallet core - use path to parent directory
nozy = { path = "../../" }

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }
