[workspace]

[package]
name = "nozywallet-desktop"
version = "2.3.2"
edition = "2021"

[dependencies]
tauri = { version = "=2.9.1", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
hex = "0.4"
sha2 = "0.10"
zcash_protocol = "0.9"
indexmap = { version = "2.13.1", features = ["std"] }

# NozyWallet core - use path to parent directory
nozy = { path = "../../" }
zeaking = { path = "../../zeaking", features = ["lightwalletd"] }

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }
