[workspace]

[package]
name = "nozywallet-desktop"
version = "1.0.0-beta.2"
edition = "2021"

[dependencies]
tauri = { version = "=2.11.1", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
hex = "0.4"
sha2 = "0.10"
zcash_protocol = { git = "https://github.com/zcash/librustzcash", rev = "4d9a68dc80508e7644aa99e1b4add7c831057bba" }
indexmap = { version = "2.13.1", features = ["std"] }

# NozyWallet core - use path to parent directory
nozy = { path = "../../" }
zeaking = { path = "../../zeaking", features = ["lightwalletd"] }

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }
